--- a/js/pdfjs/web/locale/da/viewer.properties
+++ b/js/pdfjs/web/locale/da/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Find den næste forekomst
 find_next_label=Næste
 find_highlight=Fremhæv alle
 find_match_case_label=Forskel på store og små bogstaver
+find_match_diacritics_label=Diakritiske tegn
 find_entire_word_label=Hele ord
 find_reached_top=Toppen af siden blev nået, fortsatte fra bunden
 find_reached_bottom=Bunden af siden blev nået, fortsatte fra toppen
@@ -248,3 +249,19 @@ password_cancel=Fortryd
 printing_not_supported=Advarsel: Udskrivning er ikke fuldt understøttet af browseren.
 printing_not_ready=Advarsel: PDF-filen er ikke fuldt indlæst til udskrivning.
 web_fonts_disabled=Webskrifttyper er deaktiverede. De indlejrede skrifttyper i PDF-filen kan ikke anvendes.
+
+# Editor
+editor_none.title=Deaktiver redigering af anmærkninger
+editor_none_label=Deaktiver redigering
+editor_ink.title=Tilføj håndskreven anmærkning
+editor_ink_label=Håndskreven anmærkning
+
+freetext_default_content=Indtast noget tekst…
+
+free_text_default_content=Indtast tekst…
+
+# Editor Parameters
+editor_free_text_font_color=Skriftfarve
+editor_free_text_font_size=Skriftstørrelse
+editor_ink_line_color=Linjefarve
+editor_ink_line_thickness=Linjetykkelse
