--- a/js/pdfjs/web/locale/en-CA/viewer.properties
+++ b/js/pdfjs/web/locale/en-CA/viewer.properties
@@ -168,9 +168,10 @@ find_previous.title=Find the previous occurrence of the phrase
 find_previous_label=Previous
 find_next.title=Find the next occurrence of the phrase
 find_next_label=Next
-find_highlight=Highlight all
-find_match_case_label=Match case
-find_entire_word_label=Whole words
+find_highlight=Highlight All
+find_match_case_label=Match Case
+find_match_diacritics_label=Match Diacritics
+find_entire_word_label=Whole Words
 find_reached_top=Reached top of document, continued from bottom
 find_reached_bottom=Reached end of document, continued from top
 # LOCALIZATION NOTE (find_match_count): The supported plural forms are
@@ -248,3 +249,21 @@ password_cancel=Cancel
 printing_not_supported=Warning: Printing is not fully supported by this browser.
 printing_not_ready=Warning: The PDF is not fully loaded for printing.
 web_fonts_disabled=Web fonts are disabled: unable to use embedded PDF fonts.
+
+# Editor
+editor_none.title=Disable Annotation Editing
+editor_none_label=Disable Editing
+editor_free_text.title=Add FreeText Annotation
+editor_free_text_label=FreeText Annotation
+editor_ink.title=Add Ink Annotation
+editor_ink_label=Ink Annotation
+
+freetext_default_content=Enter some text…
+
+free_text_default_content=Enter text…
+
+# Editor Parameters
+editor_free_text_font_color=Font Colour
+editor_free_text_font_size=Font Size
+editor_ink_line_color=Line Colour
+editor_ink_line_thickness=Line Thickness
