--- a/js/pdfjs/web/locale/es-ES/viewer.properties
+++ b/js/pdfjs/web/locale/es-ES/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Encontrar la siguiente aparición de esta frase
 find_next_label=Siguiente
 find_highlight=Resaltar todos
 find_match_case_label=Coincidencia de mayús./minús.
+find_match_diacritics_label=Coincidir diacríticos
 find_entire_word_label=Palabras completas
 find_reached_top=Se alcanzó el inicio del documento, se continúa desde el final
 find_reached_bottom=Se alcanzó el final del documento, se continúa desde el inicio
@@ -248,3 +249,21 @@ password_cancel=Cancelar
 printing_not_supported=Advertencia: Imprimir no está totalmente soportado por este navegador.
 printing_not_ready=Advertencia: Este PDF no se ha cargado completamente para poder imprimirse.
 web_fonts_disabled=Las tipografías web están desactivadas: es imposible usar las tipografías PDF embebidas.
+
+# Editor
+editor_none.title=Desactivar la edición de anotaciones
+editor_none_label=Desactivar edición
+editor_free_text.title=Añadir anotación FreeText
+editor_free_text_label=Anotación FreeText
+editor_ink.title=Añadir anotación de tinta
+editor_ink_label=Anotación de tinta
+
+freetext_default_content=Introduzca algún texto…
+
+free_text_default_content=Introducir texto…
+
+# Editor Parameters
+editor_free_text_font_color=Color de la fuente
+editor_free_text_font_size=Tamaño de la fuente
+editor_ink_line_color=Color de la línea
+editor_ink_line_thickness=Grosor de la línea
