--- a/js/pdfjs/web/locale/eu/viewer.properties
+++ b/js/pdfjs/web/locale/eu/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Bilatu esaldiaren hurrengo parekatzea
 find_next_label=Hurrengoa
 find_highlight=Nabarmendu guztia
 find_match_case_label=Bat etorri maiuskulekin/minuskulekin
+find_match_diacritics_label=Bereizi diakritikoak
 find_entire_word_label=Hitz osoak
 find_reached_top=Dokumentuaren hasierara heldu da, bukaeratik jarraitzen
 find_reached_bottom=Dokumentuaren bukaerara heldu da, hasieratik jarraitzen
@@ -248,3 +249,21 @@ password_cancel=Utzi
 printing_not_supported=Abisua: inprimatzeko euskarria ez da erabatekoa nabigatzaile honetan.
 printing_not_ready=Abisua: PDFa ez dago erabat kargatuta inprimatzeko.
 web_fonts_disabled=Webeko letra-tipoak desgaituta daude: ezin dira kapsulatutako PDF letra-tipoak erabili.
+
+# Editor
+editor_none.title=Desgaitu oharren edizioa
+editor_none_label=Desgaitu edizioa
+editor_free_text.title=Gehitu testu-oharra
+editor_free_text_label=Testu-oharra
+editor_ink.title=Gehitu esku-oharra
+editor_ink_label=Esku-oharra
+
+freetext_default_content=Idatzi testua…
+
+free_text_default_content=Idatzi testua…
+
+# Editor Parameters
+editor_free_text_font_color=Letra-kolorea
+editor_free_text_font_size=Letra-tamaina
+editor_ink_line_color=Lerroaren kolorea
+editor_ink_line_thickness=Lerroaren lodiera
