--- a/js/pdfjs/web/locale/oc/viewer.properties
+++ b/js/pdfjs/web/locale/oc/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Tròba l'ocurréncia venenta de la frasa
 find_next_label=Seguent
 find_highlight=Suslinhar tot
 find_match_case_label=Respectar la cassa
+find_match_diacritics_label=Respectar los diacritics
 find_entire_word_label=Mots entièrs
 find_reached_top=Naut de la pagina atenh, perseguida del bas
 find_reached_bottom=Bas de la pagina atench, perseguida al començament
@@ -248,3 +249,21 @@ password_cancel=Anullar
 printing_not_supported=Atencion : l'impression es pas completament gerida per aqueste navegador.
 printing_not_ready=Atencion : lo PDF es pas entièrament cargat per lo poder imprimir.
 web_fonts_disabled=Las poliças web son desactivadas : impossible d'utilizar las poliças integradas al PDF.
+
+# Editor
+editor_none.title=Desactivar l’edicion d’anotacions
+editor_none_label=Desactivar l’edicion
+editor_free_text.title=Apondre de tèxte
+editor_free_text_label=Tèxte
+editor_ink.title=Dessenhar
+editor_ink_label=Dessenh
+
+freetext_default_content=Picatz de tèxte…
+
+free_text_default_content=Picatz de tèxt…
+
+# Editor Parameters
+editor_free_text_font_color=Color de poliça
+editor_free_text_font_size=Talha de poliça
+editor_ink_line_color=Color de linha
+editor_ink_line_thickness=Espessor de la linha
